--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background">
 
     <RelativeLayout
-        android:layout_width="match_parent" android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ProgressBar
             android:id="@+id/community_progress_bar"
@@ -16,10 +19,9 @@
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="20dp"
-            android:background="@drawable/background">
+            android:paddingTop="20dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -211,7 +213,7 @@
                     android:paddingStart="5dp"
                     android:paddingTop="5dp"
                     android:textSize="18dp"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
@@ -229,7 +231,7 @@
                     android:paddingStart="5dp"
                     android:paddingTop="5dp"
                     android:textSize="18dp"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
@@ -247,7 +249,7 @@
                     android:paddingStart="5dp"
                     android:paddingTop="5dp"
                     android:textSize="18dp"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
@@ -265,7 +267,7 @@
                     android:paddingStart="5dp"
                     android:paddingTop="5dp"
                     android:textSize="18dp"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
@@ -283,7 +285,7 @@
                     android:paddingStart="5dp"
                     android:paddingTop="5dp"
                     android:textSize="18dp"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
@@ -301,7 +303,7 @@
                     android:paddingStart="5dp"
                     android:paddingTop="5dp"
                     android:textSize="18dp"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
@@ -316,13 +318,18 @@
                     android:id="@+id/otherIcon7"/>
                 <TextView
                     android:id="@+id/otherPledge7"
+                    android:textSize="18dp"
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
                     android:paddingStart="5dp"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:layout_weight="1"/>
         </LinearLayout>
     </RelativeLayout>
 </ScrollView>
