--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -14,12 +14,9 @@
 
         <LinearLayout
             android:id="@+id/resultTopBox"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            style="@style/RectangleShortRounded"
             android:orientation="horizontal"
+            android:background="@drawable/frame"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -27,14 +24,13 @@
             <TextView
                 android:id="@+id/resultGreeter"
                 style="@style/GreenHeadingSmall"
-                android:layout_width="300dp"
+                android:layout_width="280dp"
                 android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/result_greeting"
                 app:layout_constraintEnd_toStartOf="@+id/clippyImage2"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,38 +49,28 @@
 
         <TextView
             android:id="@+id/resultText"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/SquareRoundedText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resultTopBox" />
 
-        <TextView
-            android:id="@+id/emissionSplitText"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="@string/emission_split_text"
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/resultBarChart"
+            style="@style/SquareRounded"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/resultTopBox" />
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/resultPieChart"
+            style="@style/SquareRounded"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resultText" />
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/emissionSplitChart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+        <TextView
+            android:id="@+id/emissionSplitText"
+            style="@style/SquareRoundedText"
+            android:text="@string/emission_split_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emissionSplitText" />
+            app:layout_constraintTop_toBottomOf="@+id/resultBarChart" />
 
         <Button
             android:id="@+id/getSuggestion"
@@ -92,12 +78,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="32dp"
             android:text="@string/get_suggestion"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
+            app:layout_constraintTop_toBottomOf="@+id/resultPieChart" />
 
 
     </android.support.constraint.ConstraintLayout>
