--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,10 @@
     </style>
 
     <style name="RoundedFrame">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:background">@drawable/frame</item>
         <item name="android:layout_margin">4dp</item>
     </style>
@@ -63,18 +67,13 @@
         <item name="android:layout_width">200dp</item>
     </style>
 
-    <style name="SquareRoundedText" parent="SquareRounded">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#000000</item>
-        <item name="android:paddingStart">4dp</item>
-        <item name="android:paddingEnd">4dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:layout_height">200dp</item>
-        <item name="android:layout_width">200dp</item>
-    </style>
-
     <style name="RectangleShortRounded" parent="RoundedFrame">
         <item name="android:layout_height">99dp</item>
+        <item name="android:layout_width">400dp</item>
+    </style>
+
+    <style name="RectangleTallRounded" parent="RoundedFrame">
+        <item name="android:layout_height">180dp</item>
         <item name="android:layout_width">400dp</item>
     </style>
 
