--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -27,6 +27,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/meal_edit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/pencil"
+            app:layout_constraintStart_toEndOf="@+id/restaurant_title"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/restaurant_name"
             android:layout_width="wrap_content"
@@ -163,8 +173,8 @@
 
         <EditText
             android:id="@+id/description_edit"
-            android:layout_width="338dp"
-            android:layout_height="157dp"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -188,82 +198,119 @@
             android:textColor="@android:color/black"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/save_meal_button"
             app:layout_constraintTop_toBottomOf="@+id/facebook_share_button" />
 
         <Spinner
             android:id="@+id/location_spinner"
-            android:entries="@array/city_array"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:entries="@array/city_array"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/save_meal_button"
             app:layout_constraintTop_toBottomOf="@+id/share_location_switch" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:paddingEnd="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
+
+        <TextView
+            android:id="@+id/add_photo_text"
+            android:layout_width="180dp"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/add_photo"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/description_edit">
+            app:layout_constraintTop_toBottomOf="@+id/description_edit" />
 
-            <TextView
-                android:layout_width="94dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="2"
-                android:paddingStart="10dp"
-                android:text="@string/add_photo"
-                android:textColor="@android:color/black"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/gallery_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/gallery"
+            app:layout_constraintStart_toEndOf="@+id/add_photo_text"
+            app:layout_constraintTop_toBottomOf="@+id/description_edit" />
 
-            <ImageView
-                android:id="@+id/gallery_button"
-                android:layout_width="10dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:src="@drawable/gallery" />
+        <ImageView
+            android:id="@+id/camera_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/camera"
+            app:layout_constraintEnd_toStartOf="@+id/reset_button"
+            app:layout_constraintStart_toEndOf="@+id/gallery_button"
+            app:layout_constraintTop_toBottomOf="@+id/description_edit" />
 
-            <ImageView
-                android:id="@+id/camera_button"
-                android:layout_width="10dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:src="@drawable/camera" />
-
-            <ImageView
-                android:layout_gravity="center"
-                android:id="@+id/reset_button"
-                android:layout_width="10dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:src="@drawable/reset" />
+        <ImageView
+            android:id="@+id/reset_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/reset"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/description_edit" />
 
 
+        <ImageView
+            android:id="@+id/final_photo"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="60dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/android"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/description_edit" />
 
-        </LinearLayout>
+        <Button
+            android:id="@+id/save_meal_button"
+            style="@style/NiceButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="130dp"
+            android:text="Save Meal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_photo_text" />
+
+        <TextView
+            android:id="@+id/or_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="OR"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/facebook_share_button"
+            app:layout_constraintStart_toEndOf="@+id/save_meal_button"
+            app:layout_constraintTop_toTopOf="@+id/save_meal_button" />
 
         <Button
             android:id="@+id/facebook_share_button"
             style="@style/NiceButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="130dp"
             android:layout_marginEnd="8dp"
             android:drawableLeft="@drawable/fui_ic_facebook_white_22dp"
             android:text="@string/share_facebook"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/add_photo_text" />
 
     </android.support.constraint.ConstraintLayout>
 
