--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -258,6 +258,42 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/description_edit" />
 
+        <ImageView
+            android:id="@+id/speech_bubble"
+            android:layout_width="120dp"
+            android:layout_height="102dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="8dp"
+            android:rotation="40"
+            android:scaleType="fitXY"
+            android:src="@drawable/speech"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.214"
+            app:layout_constraintStart_toEndOf="@+id/final_photo"
+            app:layout_constraintTop_toBottomOf="@+id/description_edit" />
+
+        <TextView
+            android:id="@+id/speech_bubble_text"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:rotation="40"
+            android:scaleType="fitXY"
+            android:text="@string/why_not"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/speech_bubble"
+            app:layout_constraintEnd_toEndOf="@+id/speech_bubble"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/speech_bubble"
+            app:layout_constraintTop_toTopOf="@+id/speech_bubble"
+            app:layout_constraintVertical_bias="0.666" />
+
     </android.support.constraint.ConstraintLayout>
 
 
