--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -49,9 +49,12 @@
 
         <RadioGroup
             android:id="@+id/pledgeRadioGroup"
-            style="@style/SquareRounded"
+            style="@style/RoundedFrame"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@id/guideline1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/suggestionFirstBox">
 
@@ -96,7 +99,10 @@
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/suggestionChart"
-            style="@style/SquareRounded"
+            style="@style/RoundedFrame"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            app:layout_constraintEnd_toStartOf="@id/guideline1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/suggestionFirstBox" />
 
@@ -278,6 +284,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/suggestionSecondBox" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="603dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintGuide_begin="97dp"
+            app:layout_constraintGuide_percent=".5"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </android.support.constraint.ConstraintLayout>
