--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -45,6 +45,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/meal_delete"
+            style="@style/NiceButtonRed"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/delete_meal"
+            app:layout_constraintEnd_toStartOf="@+id/restaurant_title"
+            app:layout_constraintTop_toBottomOf="@+id/meal_1_button" />
+
 
         <TextView
             android:id="@+id/restaurant_title"
