--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,6 +53,11 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="NiceButtonRed" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:backgroundTint">#FF0000</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
     <style name="RoundedFrame">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#000000</item>
