--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -94,7 +94,6 @@
                 android:textColor="@color/themeGreen"
                 android:textStyle="bold" />
 
-
         </RadioGroup>
 
         <com.github.mikephil.charting.charts.BarChart
@@ -136,139 +135,25 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/suggestionCarbonSaving"
+            style="@style/RoundedFrame"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:text="@string/suggestion_filler"
+            app:layout_constraintStart_toEndOf="@id/guideline1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionSecondBox" />
 
-
-
-
-
-        <!--<TextView-->
-            <!--android:id="@+id/suggestionText2"-->
-            <!--style="@style/BlackText"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="0dp"-->
-            <!--android:text="@string/suggestion_text_2"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/suggestionText1" />-->
-
-
-        <!--<TextView-->
-            <!--android:id="@+id/suggestionText3"-->
-            <!--style="@style/BlackText"-->
-            <!--android:layout_width="334dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="28dp"-->
-            <!--android:text="@string/suggestion_text_3"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/suggestionText2" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/userEmissionSaving"-->
-            <!--style="@style/BlackText"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="28dp"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/suggestionText3"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/suggestionText2" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/userLegend"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="32dp"-->
-            <!--android:layout_marginTop="0dp"-->
-            <!--android:text="@string/user_legend"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/suggestionChart"-->
-            <!--style="@style/GreenText"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/averageLegend"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="0dp"-->
-            <!--android:text="@string/average_legend"-->
-            <!--app:layout_constraintEnd_toStartOf="@+id/dietLegend"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/userLegend"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/suggestionChart"-->
-            <!--style="@style/YellowText"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/dietLegend"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="0dp"-->
-            <!--android:text="@string/suggestion_legend"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/suggestionChart"-->
-            <!--style="@style/RedText"/>-->
-
-
-
-        <!--<TextView-->
-            <!--android:id="@+id/vancouverText"-->
-            <!--style="@style/BlackText"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:layout_marginEnd="8dp"-->
-            <!--android:text="@string/all_vancouver"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/averageLegend" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/vancouverText2"-->
-            <!--style="@style/BlackText"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="42dp"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:layout_marginEnd="8dp"-->
-            <!--android:text="@string/tree_offset"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/carbonHeading" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/carbonHeading"-->
-            <!--style="@style/GreenHeading"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="0dp"-->
-            <!--android:text="@string/carbon_save"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/carbonSaved"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/vancouverText" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/carbonSaved"-->
-            <!--style="@style/GreenHeading"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="32dp"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/vancouverText" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/treeHeading"-->
-            <!--style="@style/GreenHeading"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="0dp"-->
-            <!--android:text="@string/trees_save"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/treesSaved"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/treesSaved"-->
-            <!--style="@style/GreenHeading"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="32dp"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />-->
+        <TextView
+            android:id="@+id/suggestionTreeOffset"
+            style="@style/RoundedFrame"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:text="@string/suggestion_filler"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guideline1"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionSecondBox" />
 
         <Button
             android:id="@+id/pledge_button"
@@ -283,7 +168,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionSecondBox" />
+            app:layout_constraintTop_toBottomOf="@+id/suggestionTreeOffset" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline1"
